[package]
name = "tasklet"
version = "0.2.11"
authors = ["Stavros Grigoriou <unix121@protonmail.com>"]
edition = "2021"
rust-version = "1.90.0"
license = "MIT"
repository = "https://github.com/stav121/tasklet"
readme = "README.md"
description = "An asynchronous task scheduling library"
keywords = ["cron", "scheduling", "tasks", "tasklet", "async"]

[dependencies]
cron = "0.15.0"
chrono = "0.4.42"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
thiserror = "2.0.17"

[dev-dependencies]
simple_logger = "5.0.0"
tokio-test = "0.4.4"
